--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,9 +3,10 @@ div.to_be_centered {
     position: relative }
 div.to_be_centered a {
 	color: black;
+    vertical-align: middle;
 	text-decoration: none;
 	font-size: 3em;
-    margin: 0;
+    margin: 15px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -14,10 +15,21 @@ div.to_be_centered a {
     transform: translate(-50%, -50%); 
 }
 
+a {
+    /*text-decoration: none;*/
+    color: black;
+}
+
+a:hover {
+    color: grey;
+}
+
 div.to_be_centered a:hover {
 	color: grey;
 	/*text-decoration: underline;*/
-
 }
 
+p {
+    font-family : 'Roboto', 'Lato', sans-serif;
+}
 
