--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,42 +1,72 @@
+#bottom { 
+	position: fixed;
+	bottom: 2%;
+	left: 50%;
+    	transform: translateX(-50%);
+}
+
 div.to_be_centered {
-    height: 10em;
-    position: relative }
+	height: 18em;
+	position: relative 
+}
+
 div.to_be_centered a {
 	color: black;
-    vertical-align: middle;
+	vertical-align: middle;
 	text-decoration: none;
 	font-size: 3em;
-    margin: 15px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    font-family : 'Lato', sans-serif;
-    transform: translate(-50%, -50%); 
+	margin: 15px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	font-family : 'Georgia', serif;
+	transform: translate(-50%, -50%);
 }
 
 a {
-    /*text-decoration: none;*/
-    color: black;
+	text-decoration: none;
+	color: black;
+}
+
+hr.style-eight {
+    padding: 0;
+    border: none;
+    width: 70%;
+    border-top: medium double #333;
+    color: #333;
+    text-align: center;
+}
+hr.style-eight:after {
+    content: "\221E ";
+    display: inline-block;
+    position: relative;
+    top: -0.7em;
+    font-size: 1.5em;
+    padding: 0 0.25em;
+    background: white;
 }
 
 #abstract {
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    color: grey;
+	font-style: italic;
+	font-family: 'Merriweather', 'Georgia', 'serif';
+	font-size: 1.3em;
+	text-align: center;
+	width: 50%;
+	margin: 0 auto;
+	color: grey;
 }
 
 a:hover {
-    color: grey;
+	color: grey;
 }
 
 div.to_be_centered a:hover {
 	color: grey;
-	/*text-decoration: underline;*/
 }
-
+a.down {
+	font-weight: bold;
+}
 p {
-    font-family : 'Roboto', 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
-
